# eth-archive

./: .env  .gitignore  Cargo.toml  Dockerfile  EthArchive.toml  EthGateway.toml  EthIngester.toml  EthParquetWriter.toml  Makefile  Makefile.toml  README.md  bench.js  docker-compose.yaml  docker-compose.yml  log.txt  mc.dockerfile
.github/: dependabot.yml
.github/workflows/: build-mc.yml  check-and-lint.yml  ci.yml  docker-publish.yml
charts/: ingester.values.yaml  ingester.yaml  worker.values.yaml  worker.yaml
core/: Cargo.toml
core/src/: config.rs  db.rs  deserialize.rs  dir_name.rs  error.rs  eth_client.rs  eth_request.rs  hash.rs  ingest_metrics.rs  ingest_stream.rs  lib.rs  local_sync.rs  old_format.rs  options.rs  parquet_source.rs  rayon_async.rs  retry.rs  s3_client.rs  s3_sync.rs  types.rs
core/src/old_format/: util.rs  ver0_0_39.rs
core/src/parquet_source/: mod.rs  util.rs  ver0_0_39.rs  ver0_1_0.rs  ver_0_1_0.rs
gateway/: Cargo.toml
gateway/src/: config.rs  data_ctx.rs  error.rs  field_selection.rs  lib.rs  main.rs  options.rs  parquet_table.rs  query.rs  range_map.rs  server.rs  types.rs
gateway/tests/: cfg.toml  common.rs  tests.rs
gateway/tests/data/block/: block0_3.parquet  block3_3.parquet
gateway/tests/data/log/: log0_3.parquet  log3_3.parquet
gateway/tests/data/tx/: tx0_3.parquet  tx3_3.parquet
ingest-stream/: Cargo.toml
ingest-stream/src/: lib.rs
ingester/: Cargo.toml  EthIngester.toml
ingester/migrations/: V1__initial.sql
ingester/src/: config.rs  consts.rs  db.rs  deserialize.rs  error.rs  eth_client.rs  eth_request.rs  ingester.rs  lib.rs  main.rs  metrics.rs  options.rs  parquet_src.rs  retry.rs  rpc_client.rs  runner.rs  s3_sync.rs  schema.rs  server.rs  types.rs
ingester/src/parquet_src/: ver0_0_39.rs
libs/parquet-writer/: Cargo.toml
libs/parquet-writer/src/: error.rs  lib.rs  parquet_writer.rs  schema.rs
parquet-writer/: Cargo.toml
parquet-writer/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  options.rs  parquet_writer.rs  runner.rs  schema.rs
rayon-async/: Cargo.toml
rayon-async/src/: lib.rs
rpc-proxy/: Cargo.toml
rpc-proxy/src/: config.rs  error.rs  handler.rs  lib.rs  main.rs  metrics.rs  server.rs  types.rs
scripts/: generate-parquets.sh
scripts/generate-parquets/: Cargo.toml  data.json
scripts/generate-parquets/src/: data.rs  main.rs  parquet.rs
src/: config.rs  error.rs  eth_client.rs  eth_request.rs  get_blocks.rs  lib.rs  main.rs  parquet.rs  parquet_cfg.rs  parquet_writer.rs  retry.rs  schema.rs  types.rs
test-scripts/: tester.js
test-scripts/queries/: uniswap.json
tests/data/: block0_0.parquet  log0_0.parquet  transaction0_0.parquet
verifier/: Cargo.toml
verifier/src/: archive_client.rs  config.rs  error.rs  lib.rs  main.rs  types.rs  verifier.rs
worker/: Cargo.toml
worker/src/: bloom.rs  config.rs  data_ctx.rs  db.rs  db_writer.rs  downloader.rs  error.rs  field_selection.rs  lib.rs  main.rs  parquet_frame.rs  parquet_metadata.rs  parquet_watcher.rs  serialize_task.rs  server.rs  thread_pool.rs  types.rs
worker/src/parquet_query/: block.rs  log.rs  mod.rs  read.rs  transaction.rs  util.rs
