[workspace]
members = [
    "ingester",
    "core",
    "worker",
    "rpc-proxy",
]

[workspace.dependencies.arrow2]
git = "https://github.com/jorgecarleitao/arrow2"
default-features = false
features = [
    "io_parquet",
    "io_parquet_lz4",
    "compute",
]

[workspace.dependencies.hyper]
version = "0.14.24"
features = [
    "http1",
    "http2",
    "server",
]
