[package]
name = "eth-archive-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5.9"
thiserror = "1.0"
log = "0.4"
serde_json = "1"
url = { version = "2", features = ["serde"] } 
futures = "0.3"
prefix-hex = "0.4.0"
derive_more = "0.99.17"
tokio = { version = "1", features = ["full"] }

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["json", "rustls-tls", "gzip"]
