[package]
name = "eth-archive-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5.9"
thiserror = "1.0"
log = "0.4"
serde_json = "1"
url = { version = "2", features = ["serde"] } 
futures = "0.3"
prefix-hex = "0.5.0"
derive_more = "0.99.17"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.3"
rayon = "1"
clap = { version = "4", features = ["derive"] }
prometheus-client = "0.18.1"
aws-sdk-s3 = "0.22.0"
aws-config = "0.52.0"
aws-smithy-http = "0.52.0"
aws-types = "0.52.0"
rand = "0.8.5"
arrayvec = { version = "0.7.2", features = ["serde"] }

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["json", "rustls-tls", "gzip"]
