[package]
name = "eth-archive-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
log = "0.4"
serde_json = "1"
url = { version = "2", features = ["serde"] } 
futures = "0.3"
prefix-hex = "0.5"
derive_more = "0.99"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
rayon = "1"
clap = { version = "4", features = ["derive"] }
prometheus-client = "0.19"
aws-sdk-s3 = "0.24"
aws-config = "0.54.1"
aws-types = "0.54.1"
rand = "0.8"
arrayvec = { version = "0.7", features = ["serde"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "gzip"]

[dependencies.polars]
version = "0.27"
features = [ "performant", "lazy", "is_in", "dtype-full", "parquet", "cse" ]
