[package]
name = "eth-archive-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { git = "https://github.com/ozgrakkurt/arrow-datafusion" }
datafusion-expr = { git = "https://github.com/ozgrakkurt/arrow-datafusion" }
tokio = { version = "1.18.2", features = ["full"] }
arrow = "20.0.0"
bytes = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
log = "0.4.17"
env_logger = "0.9.0"
convert_case = "0.5.0"
snmalloc-rs = "0.3.3"
clap = { version = "3", features = ["derive"] }
toml = "0.5.9"
prefix-hex = "0.4.0"
range-map = "0.1.5"
rayon = "1.5.3"

eth-archive-core = { path = "../core" }

[dependencies.actix-web]
version = "4.0.1"
default-features = false
features = [ "compress-gzip", "rustls" ]
