[package]
name = "eth-archive-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { git = "https://github.com/apache/arrow-datafusion" }
datafusion-expr = { git = "https://github.com/apache/arrow-datafusion" }
tokio = { version = "1.18.2", features = ["full"] }
arrow = "21.0.0"
bytes = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "3", features = ["derive"] }
toml = "0.5.9"
prefix-hex = "0.4.0"
rayon = "1.5.3"
itertools = "0.10.3"

eth-archive-core = { path = "../core" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dependencies.actix-web]
version = "4.0.1"
default-features = false
features = ["macros"]

[dev-dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
