[package]
name = "eth-archive-ingester"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
rayon = "1"
itertools = "0.10"
tokio-util = { version = "0.7", features = ["compat"] }
actix-web = "4"
aws-sdk-s3 = "0.21.0"
aws-config = "0.51.0"
aws-smithy-http = "0.51.0"
aws-types = "0.51.0"

eth-archive-core = { path = "../core" }

[dependencies.arrow2]
version = "0.14"
features = [ "io_parquet", "io_parquet_compression", "compute" ]
