[package]
name = "eth-archive-ingester"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
rayon = "1"
itertools = "0.10"
actix-web = "4"
mimalloc = { version = "0.1.34", default-features = false }
arrayvec = { version = "0.7", features = ["serde"] }
zstd = "0.12.3"

eth-archive-core = { path = "../core" }

[dependencies.arrow2]
version = "0.16"
features = [ "io_parquet", "io_parquet_compression", "compute" ]
