[package]
name = "eth-archive-ingester"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
rayon = "1"
itertools = "0.10"
mimalloc = { workspace = true }
arrayvec = { version = "0.7", features = ["serde"] }
arrow2 = { workspace = true }
hyper = { workspace = true }

eth-archive-core = { path = "../core" }
