[package]
name = "eth-archive-parquet-writer"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.18.0", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
futures = "0.3.21"
toml = "0.5.9"
url = { version = "2.2.2", features = ["serde"] } 
rayon = "1.5.3"
mimalloc = { version = "*", default-features = false }
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "3", features = ["derive"] }

eth-archive-core = { path = "../core" }

[dependencies.arrow2]
version = "0.13.1"
features = [ "io_parquet", "io_parquet_compression", "compute" ]

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["json", "rustls-tls", "gzip"]
