[package]
name = "eth-archive-rpc-proxy"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
actix-web = "4"
mimalloc = { version = "0.1.34", default-features = false }

eth-archive-core = { path = "../core" }
