[package]
name = "eth-archive-rpc-proxy"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
mimalloc = { workspace = true }
url = { version = "2", features = ["serde"] }
prometheus-client = "0.19"
hyper = { workspace = true }

eth-archive-core = { path = "../core" }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "gzip"]
