[package]
name = "eth-archive-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "4", features = ["derive"] }
url = "2"
rand = "0.8.5"

eth-archive-core = { path = "../core" }

[dependencies.rocksdb]
version = "0.19"
default-features = false
features = ["lz4"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"
