[package]
name = "eth-archive-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = { version = "0.1.32", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "4", features = ["derive"] }

eth-archive-core = { path = "../core" }
