[package]
name = "eth-archive-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = { version = "0.1.34", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "4", features = ["derive"] }
url = { version = "2", features = ["serde"] } 
futures = "0.3"

eth-archive-core = { path = "../core" }
eth-archive-worker = { path = "../worker" }

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["json", "rustls-tls", "gzip"]
