[package]
name = "eth-archive-worker"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
prefix-hex = "0.5"
rayon = "1"
actix-web = "4"
rmp-serde = "1.1"
arrayvec = { version = "0.7.2", features = ["serde"] }
futures = "0.3"
mimalloc = { version = "0.1.34", default-features = false }
crossbeam-channel = "0.5"
derive_more = "0.99"
xorf = { version = "0.8.1", features = ["serde"] }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
threadpool = "1"
libmdbx = { version = "0.2.5", default-features = false }

eth-archive-core = { path = "../core" }

[dependencies.polars]
git = "https://github.com/pola-rs/polars"
features = [ "performant", "lazy", "is_in", "dtype-full", "parquet", "cse" ]
