[package]
name = "eth-archive-worker"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
prefix-hex = "0.6"
rayon = "1"
rmp-serde = "1.1"
arrayvec = { version = "0.7.2", features = ["serde"] }
futures = "0.3"
mimalloc = { workspace = true }
crossbeam-channel = "0.5"
derive_more = "0.99"
xorf = { version = "0.8", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rocksdb = { version = "0.20", default-features = false, features = ["lz4"] }
arrow2 = { workspace = true }
hyper = { workspace = true }

eth-archive-core = { path = "../core" }
eth-archive-ingester = { path = "../ingester" }

[features]
rocksdb-unix = ["rocksdb/jemalloc", "rocksdb/io-uring"]
