[package]
name = "parquet-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["sync"] }
rayon = "1.5.3"
itertools = "0.10.3"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0.137", features = ["derive"] }

eth-archive-core = { path = "../../core" }

[dependencies.arrow2]
version = "0.14.1"
features = ["io_parquet", "io_parquet_compression", "compute"]
