[package]
name = "generate-parquets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-archive-core = { path = "../../core/" }
eth-archive-parquet-writer = { path = "../../parquet-writer/" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.18.0", features = ["full"] }
prefix-hex = "0.4.0"
